# bits-wilp

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt  train.ipynb  train_model.py
model/: decision_tree.pkl  knn.pkl  logistic_regression.pkl  naive_bayes.pkl  random_forest.pkl  xgboost.pkl
